corpus/cpp/template/case-13/snapshots/gcc13_14/single_sink_structured/render.debug.txt
error: [template] no matching function for call to 'expect_ptr(int&)' @ src/main.cpp:6:5
raw : no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void expect_ptr(T*)'
  - src/main.cpp:2:6 template argument deduction/substitution failed:
debug: rule_id=rule.family.template.structured_or_message
debug: matched_conditions=context=template_instantiation, child_note_kind=template_context, child_message_contains=template, child_message_contains=deduction/substitution, phase=instantiate
explain: repair_unit=repair-unit:node-sarif-0-0+node-sarif-0-0-related-1+node-sarif-0-0-related-2+node-sarif-0-0-related-3 proof=Proven visibility=HiddenAllowed
explain: member=node:sarif-0-0 target=DiagnosticNode { node_ref: "sarif-0-0" } unresolved=false
explain: member=node:sarif-0-0-related-1 target=DiagnosticNode { node_ref: "sarif-0-0-related-1" } unresolved=false
explain: member=node:sarif-0-0-related-2 target=DiagnosticNode { node_ref: "sarif-0-0-related-2" } unresolved=false
explain: member=node:sarif-0-0-related-3 target=DiagnosticNode { node_ref: "sarif-0-0-related-3" } unresolved=false
explain: raw_capture=diagnostics.sarif
explain: relation=hierarchy:node:sarif-0-0->node:sarif-0-0-related-1 kind=CompilerHierarchy authority=CompilerDeclared proof=Proven tags=preserved_child_order
explain: relation=hierarchy:node:sarif-0-0->node:sarif-0-0-related-2 kind=CompilerHierarchy authority=CompilerDeclared proof=Proven tags=preserved_child_order
explain: relation=hierarchy:node:sarif-0-0->node:sarif-0-0-related-3 kind=CompilerHierarchy authority=CompilerDeclared proof=Proven tags=preserved_child_order
details: --formed-explain | raw: --formed-raw